<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ntocampos.nutritionalpyramid.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_text"
                android:id="@+id/textView"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center_horizontal"
                android:paddingBottom="25dp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:id="@+id/textView2"
                    android:layout_row="0"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/weightEditText"
                    android:layout_row="0"
                    android:layout_column="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight_unit"
                    android:id="@+id/textView3"
                    android:layout_row="0"
                    android:layout_column="3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/carbs_percent"
                    android:id="@+id/textView4"
                    android:layout_row="1"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/carbsEditText"
                    android:layout_row="1"
                    android:layout_column="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent"
                    android:id="@+id/textView5"
                    android:layout_row="1"
                    android:layout_column="3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/protein_percent"
                    android:id="@+id/textView6"
                    android:layout_row="2"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/proteinEditText"
                    android:layout_row="2"
                    android:layout_column="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent"
                    android:id="@+id/textView7"
                    android:layout_row="2"
                    android:layout_column="3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fat_percent"
                    android:id="@+id/textView8"
                    android:layout_row="3"
                    android:layout_column="0" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/fatEditText"
                    android:layout_row="3"
                    android:layout_column="2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/percent"
                    android:id="@+id/textView9"
                    android:layout_row="3"
                    android:layout_column="3" />

            </GridLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculate_button"
                android:id="@+id/calculateButton"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginTop="30dp" />
        </GridLayout>

    </ScrollView>
</RelativeLayout>
