<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ntocampos.nutritionalpyramid.ResultsActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/result"
                android:id="@+id/textView10"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:gravity="center" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/textView10"
                android:layout_alignParentStart="true"
                android:layout_marginTop="25dp"
                android:id="@+id/gridLayout">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/weight"
                    android:id="@+id/textView11"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:gravity="center|center_vertical" />

                <TextView
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/weightText"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:gravity="center|center_vertical" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/carbs_percent"
                    android:id="@+id/textView13"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:gravity="center|center_vertical" />

                <TextView
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/carbsText"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:gravity="center|center_vertical" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/protein_percent"
                    android:id="@+id/textView14"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:gravity="center|center_vertical" />

                <TextView
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/proteinText"
                    android:layout_row="2"
                    android:layout_column="2"
                    android:gravity="center|center_vertical" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/fat_percent"
                    android:id="@+id/textView15"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:gravity="center|center_vertical" />

                <TextView
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/fatText"
                    android:layout_row="3"
                    android:layout_column="2"
                    android:gravity="center|center_vertical" />

            </GridLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
